@@ -1,3 +1,7 @@
+2015-05-13  Jean Delvare  <jdelvare@suse.de>
+
+	* dmidecode.c: Add support for SMBIOS3 EFI table.
+
 2015-05-12  Jean Delvare  <jdelvare@suse.de>
 
 	* dmidecode.c: Remove extra blank line after hidden DMI type 40
